--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,35 +2,116 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.25.6
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.25.7
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.25.5 release and the 5.25.6
+This document describes differences between the 5.25.6 release and the 5.25.7
 release.
 
-If you are upgrading from an earlier release such as 5.25.4, first read
-L<perl5255delta>, which describes differences between 5.25.4 and 5.25.5.
+If you are upgrading from an earlier release such as 5.25.5, first read
+L<perl5256delta>, which describes differences between 5.25.5 and 5.25.6.
+
+=head1 Notice
+
+XXX Any important notices here
+
+=head1 Core Enhancements
+
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
+
+[ List each enhancement as a =head2 entry ]
+
+=head1 Security
+
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
+
+[ List each security issue as a =head2 entry ]
+
+=head1 Incompatible Changes
+
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
 
 =head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as a =item entry ]
 
 =over 4
 
 =item *
 
-Converting a single-digit string to a number is now substantially faster.
-
-=item *
-
-The internal op implementing the C<split> builtin has been simplified and
-sped up. Firstly, it no longer requires a subsidiary internal C<pushre> op
-to do its work. Secondly, code of the form C<my @x = split(...)> is now
-optimised in the same way as C<@x = split(...)>, and is therefore a few
-percent faster.
+XXX
 
 =back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+[ Within each section, list entries as a =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -38,107 +119,46 @@ percent faster.
 
 =item *
 
-L<Archive::Tar> has been upgraded from version 2.10 to 2.14.
+L<XXX> has been upgraded from version A.xx to B.yy.
+
+=back
+
+=head2 Removed Modules and Pragmata
+
+=over 4
 
 =item *
 
-L<attributes> has been upgraded from version 0.27 to 0.28.
+XXX
+
+=back
+
+=head1 Documentation
+
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
+=head2 Changes to Existing Documentation
+
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+=head3 L<XXX>
+
+=over 4
 
 =item *
 
-L<B> has been upgraded from version 1.63 to 1.64.
-
-=item *
-
-L<B::Concise> has been upgraded from version 0.998 to 0.999.
-
-Its output is now more descriptive for C<op_private> flags.
-
-=item *
-
-L<B::Deparse> has been upgraded from version 1.38 to 1.39.
-
-=item *
-
-L<Data::Dumper> has been upgraded from version 2.161 to 2.162.
-
-=item *
-
-L<Devel::Peek> has been upgraded from version 1.24 to 1.25.
-
-=item *
-
-L<HTTP::Tiny> has been upgraded from version 0.064 to 0.070.
-
-Internal 599-series errors now include the redirect history.
-
-=item *
-
-L<List::Util> has been upgraded from version 1.45_01 to 1.46.
-
-=item *
-
-L<Module::CoreList> has been upgraded from version 5.20160920 to 5.20161020.
-
-=item *
-
-L<mro> has been upgraded from version 1.18 to 1.19.
-
-=item *
-
-L<Net::Ping> has been upgraded from version 2.44 to 2.51.
-
-IPv6 addresses and C<AF_INET6> sockets are now supported, along with several
-other enhancements.
-
-=item *
-
-L<Opcode> has been upgraded from version 1.37 to 1.38.
-
-=item *
-
-L<overload> has been upgraded from version 1.26 to 1.27.
-
-Its compilation speed has been improved slightly.
-
-=item *
-
-L<parent> has been upgraded from version 0.234 to 0.236.
-
-=item *
-
-L<PerlIO::encoding> has been upgraded from version 0.24 to 0.25.
-
-=item *
-
-podlators has been upgraded from version 4.07 to 4.08.
-
-=item *
-
-L<POSIX> has been upgraded from version 1.72 to 1.73.
-
-=item *
-
-L<Scalar::Util> has been upgraded from version 1.45_01 to 1.46.
-
-=item *
-
-L<Storable> has been upgraded from version 2.57 to 2.58.
-
-=item *
-
-L<Test::Simple> has been upgraded from version 1.302056 to 1.302059.
-
-=item *
-
-L<Time::HiRes> has been upgraded from version 1.9739 to 1.9740_01.
-
-It now builds on systems with C++11 compilers (such as G++ 6 and Clang++
-3.9).
-
-=item *
-
-L<VMS::Stdio> has been upgraded from version 2.41 to 2.42.
+XXX Description of the change here
 
 =back
 
@@ -148,7 +168,13 @@ The following additions or changes have been made to diagnostic output,
 including warnings and fatal error messages.  For the complete list of
 diagnostic messages, see L<perldiag>.
 
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
 =head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
 
 =head3 New Errors
 
@@ -156,232 +182,203 @@ diagnostic messages, see L<perldiag>.
 
 =item *
 
-Using the empty pattern (which re-executes the last successfully-matched
-pattern) inside a code block in another regex, as in C</(?{ s!!new! })/>, has
-always previously yielded a segfault. It now produces an error: L<Use of the
-empty pattern inside of a regex code block is forbidden|perldiag/"Use of the
-empty pattern inside of a regex code block is forbidden">.
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
 
 =back
 
 =head2 Changes to Existing Diagnostics
 
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
 =over 4
 
 =item *
 
-Details as to the exact problem have been added to the diagnostics that
-occur when malformed UTF-8 is encountered when trying to convert to a
-code point.
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
 
 =item *
 
-Executing C<undef $x> where C<$x> is tied or magical no longer incorrectly
-blames the variable for an uninitialized-value warning encountered by the
-tied/magical code.
+XXX
 
 =back
 
 =head1 Configuration and Compilation
 
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as a =item entry ].
+
 =over 4
 
 =item *
 
-Builds using C<USE_PAD_RESET> now work again; this configuration had
-bit-rotted.
+XXX
 
 =back
 
 =head1 Testing
 
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+[ List each test improvement as a =item entry ]
+
 =over 4
 
 =item *
 
-Some parts of the test suite that try to exhaustively test edge cases in the
-regex implementation have been restricted to running for a maximum of five
-minutes. On slow systems they could otherwise take several hours, without
-significantly improving our understanding of the correctness of the code
-under test.
-
-In addition, some of those test cases have been split into more files, to
-allow them to be run in parallel on suitable systems.
-
-=item *
-
-A new internal facility allows analysing the time taken by the individual
-tests in Perl's own test suite; see F<Porting/harness-timer-report.pl>.
+XXX
 
 =back
 
 =head1 Platform Support
 
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as a =item entry with specific
+changes as paragraphs below it. ]
+
 =head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
 
 =over 4
 
-=item NetBSD/VAX
+=item XXX-some-platform
 
-Perl now compiles under NetBSD on VAX machines.  However, it's not
-possible for that platform to implement floating-point infinities and
-NaNs compatibly with most modern systems, which implement the IEEE-754
-floating point standard.  The hexadecimal floating point (C<0x...p[+-]n>
-literals, C<printf %a>) is not implemented, either.
-The C<make test> passes 98% of tests.
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Platform-Specific Notes
+
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
 
 =back
 
 =head1 Internal Changes
 
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as a =item entry ]
+
 =over 4
 
 =item *
 
-The C<PADOFFSET> type has changed from being unsigned to signed, and
-several pad-related variables such as C<PL_padix> have changed from being
-of type C<I32> to type C<PADOFFSET>.
-
-=item *
-
-The function C<L<perlapi/utf8n_to_uvchr>> has been changed to not
-abandon searching for other malformations when the first one is
-encountered.  A call to it thus can generate multiple diagnostics,
-instead of just one.
-
-=item *
-
-A new function, C<L<perlapi/utf8n_to_uvchr_error>>, has been added for
-use by modules that need to know the details of UTF-8 malformations
-beyond pass/fail.  Previously, the only ways to know why a sequence was
-ill-formed was to capture and parse the generated diagnostics, or to do
-your own analysis.
-
-=item *
-
-Several new functions for handling Unicode have been added to the API:
-C<L<perlapi/is_strict_utf8_string>>,
-C<L<perlapi/is_c9strict_utf8_string>>,
-C<L<perlapi/is_utf8_string_flags>>,
-C<L<perlapi/is_strict_utf8_string_loc>>,
-C<L<perlapi/is_strict_utf8_string_loclen>>,
-C<L<perlapi/is_c9strict_utf8_string_loc>>,
-C<L<perlapi/is_c9strict_utf8_string_loclen>>,
-C<L<perlapi/is_utf8_string_loc_flags>>,
-C<L<perlapi/is_utf8_string_loclen_flags>>,
-C<L<perlapi/is_utf8_fixed_width_buf_flags>>,
-C<L<perlapi/is_utf8_fixed_width_buf_loc_flags>>,
-C<L<perlapi/is_utf8_fixed_width_buf_loclen_flags>>.
-
-These functions are all extensions of the C<is_utf8_string_*()> functions,
-that apply various restrictions to the UTF-8 recognized as valid.
-
-=item *
-
-A new API function C<sv_setvpv_bufsize()> allows simultaneously setting the
-length and allocated size of the buffer in an C<SV>, growing the buffer if
-necessary.
-
-=item *
-
-A new API macro C<SvPVCLEAR()> sets its C<SV> argument to an empty string,
-like Perl-space C<$x = ''>, but with several optimisations.
-
-=item *
-
-All parts of the internals now agree that the C<sassign> op is a C<BINOP>;
-previously it was listed as a C<BASEOP> in F<regen/opcodes>, which meant
-that several parts of the internals had to be special-cased to accommodate
-it. This oddity's original motivation was to handle code like C<$x ||= 1>;
-that is now handled in a simpler way.
-
-=item *
-
-Several new internal C macros have been added that take a string literal as
-arguments, alongside existing routines that take the equivalent value as two
-arguments, a character pointer and a length. The advantage of this is that
-the length of the string is calculated automatically, rather than having to
-be done manually. These routines are now used where appropriate across the
-entire codebase.
-
-=item *
-
-The code in F<gv.c> that determines whether a variable has a special meaning
-to Perl has been simplified.
-
-=item *
-
-The C<DEBUGGING>-mode output for regex compilation and execution has been
-enhanced.
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as a =item entry ]
+
 =over 4
 
 =item *
 
-A sub containing a "forward" declaration with the same name (e.g.,
-C<sub c { sub c; }>) could sometimes crash or loop infinitely.  [perl
-#129090]
-
-=item *
-
-A crash in executing a regex with a floating UTF-8 substring against a
-target string that also used UTF-8 has been fixed. [perl #129350]
-
-=item *
-
-Previously, a shebang line like C<#!perl -i u> could be erroneously
-interpreted as requesting the C<-u> option. This has been fixed. [perl
-#129336]
-
-=item *
-
-The regex engine was previously producing incorrect results in some rare
-situations when backtracking past a trie that matches only one thing; this
-showed up as capture buffers (C<$1>, C<$2>, etc) erroneously containing data
-from regex execution paths that weren't actually executed for the final
-match.  [perl #129897]
-
-=item *
-
-Certain regexes making use of the experimental C<regex_sets> feature could
-trigger an assertion failure. This has been fixed. [perl #129322]
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.25.6 represents approximately 4 weeks of development since Perl 5.25.5
-and contains approximately 16,000 lines of changes across 300 files from 23
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 10,000 lines of changes to 190 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers. The following people are known to have contributed the
-improvements that became Perl 5.25.6:
-
-Aaron Crane, Andy Lester, Chris 'BinGOs' Williams, Dagfinn Ilmari Mannsåker,
-Dan Collins, David Mitchell, François Perrad, Hugo van der Sanden, James E
-Keenan, James Raspass, Jarkko Hietaniemi, Karl Williamson, Lukas Mai, Nicolas
-R., Reini Urban, Sawyer X, Sergey Aleynikov, Stevan Little, Steve Hay, Steven
-Humphrey, Thomas Sibley, Tony Cook, Yves Orton.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history. In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core. We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.25.5..HEAD
 
 =head1 Reporting Bugs
 
