Added note about perlobj change to perldelta

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -157,13 +157,13 @@ XXX Changes which significantly change existing files in F<pod/> go here.
 However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
 section.
 
-=head3 L<XXX>
+=head3 L<perlobj>
 
 =over 4
 
 =item *
 
-XXX Description of the change here
+Added a section on calling methods using their fully qualified names.
 
 =back
 
