Stefan Seifert is now a perl author

--- a/AUTHORS
+++ b/AUTHORS
@@ -1129,6 +1129,7 @@ Spiros Denaxas			<s.denaxas@gmail.com>
 Sreeji K Das			<sreeji_k@yahoo.com>
 Stanislaw Pusep			<stas@sysd.org>
 Stas Bekman			<stas@stason.org>
+Stefan Seifert			<nine@detonation.org>
 Steffen Müller			<smueller@cpan.org>
 Steffen Schwigon		<ss5@renormalist.net>
 Steffen Ullrich			<coyote.frank@gmx.net>
