perlre: don't impugn the stability of all (?…) constructs
Previously, the documentation suggested that any or all of these constructs
might disappear or be significantly changed without notice:

    (?#comment)
    (?m)
    (?^m)
    (?:group)
    (?m-s:group)
    (?^m:group)
    (?|branch|reset)
    (?=pos lookahead)
    (?!neg lookahead)
    (?<=pos lookbehind)
    (?<!neg lookbehind)
    (?<named>capture)
    (?'named'capture)
    \k<named_backref>
    \k'named_backref'
    (?{ code })
    (??{ postponed regex })
    (?1)
    (?-2)
    (?+2)
    (?R)
    (?0)
    (?&named_subpattern)
    (?(condition)consequent|alternate), including (?(DEFINE)defs)
    (?>independent subpattern)
    (?[ [ext] + [char] - [cls] ])

Of those features, the last one (extended bracketed character classes) is
specifically experimental in our formal sense; but it's not realistic to
think that future versions of Perl might break any of the others — many of
which date back as far as 5.000. Furthermore, even if that were likely
enough to be worth pointing out, it would be better to do so on each of the
affected constructs, rather than with an easier-to-miss blanket notice at
the top of the section.

Therefore, this change removes the blanket notice, and adds a note of
experimental status to the mention of extended bracketed character classes,
linking to our policy definition of what that means.

--- a/pod/perlre.pod
+++ b/pod/perlre.pod
@@ -1056,12 +1056,6 @@ pair of parentheses with a question mark as the first thing within
 the parentheses.  The character after the question mark indicates
 the extension.
 
-The stability of these extensions varies widely.  Some have been
-part of the core language for many years.  Others are experimental
-and may change without warning or be completely removed.  Check
-the documentation on an individual feature to verify its current
-status.
-
 A question mark was chosen for this and for the minimal-matching
 construct because 1) question marks are rare in older regular
 expressions, and 2) whenever you see one, you should stop and
@@ -1894,6 +1888,9 @@ to inside of one of these constructs. The following equivalences apply:
 =item C<(?[ ])>
 
 See L<perlrecharclass/Extended Bracketed Character Classes>.
+
+Note that this feature is currently L<experimental|perlpolicy/experimental>;
+using it yields a warning in the C<experimental::regex_sets> category.
 
 =back
 
